CI/CD workflows added

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -20,7 +20,7 @@ jobs:
         run: pytest
   build:
     runs-on: ubuntu-latest
-    name: Tests the modules
+    name: Build Check
     steps:
       - name: Checkout code from Github
         uses: actions/checkout@v3
