--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: pytest
   build:
     runs-on: ubuntu-latest
-    name: Tests the modules
+    name: Builds the Package
     steps:
       - name: Checkout code from Github
         uses: actions/checkout@v3
@@ -39,7 +39,7 @@ jobs:
           path: dist/
   publish:
     runs-on: ubuntu-latest
-    name: Tests the modules
+    name: Publishes the Package
     steps:
       - name: Retrieves the build
         uses: actions/download-artifact@v3
