--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests with pytest
-        run: pytest
+        run: python -m pytest
   build:
     runs-on: ubuntu-latest
     name: Builds the Package
