--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -21,6 +21,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Check
+    needs: test
     steps:
       - name: Checkout code from Github
         uses: actions/checkout@v3
