--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10.1"
+          cache: "pip"
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests with pytest
