--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10.1"
+          cache: "pip"
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Build package
